<resources>
    <string name="app_name">Makan Yuk!!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="pesan">Pesan</string>
    <string name="booking">Booking</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="copyright">Copyright &#169; 2016\n nelitaaas@gmail.com</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="add_favr">Ditambahkan.</string>
    <string name="remove_favr">Data Dihapus.</string>
    <string name="no_favorites_items">Tidak Ada item yang dipilih.</string>
    <string name="no_favorites_msg">Long press on item to add to Pesanan</string>
    <string name="favorites">Favorites.</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="hapus_history">Hapus History</string>
    <string name="list_item">List Item</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="simpan">Simpan</string>
    <string name="booking_meja">Booking Meja</string>
    <string name="about_me">About Me</string>
    <string name="welcome_page">Untuk Melakukan Transaksi klik tombol "Keranjang Belanja" dibawah ini atau pada menu yang ada disamping.
    \nUntuk melakukan booking bisa dilakukan pada menu Booking</string>
    <string name="detail_item">Detail Produk</string>
</resources>
